@@ -1,4 +1,5 @@
 
 config.json
 tlsticket.keys
+cdnboxd.sh
 
