@@ -4,6 +4,7 @@
 .head .action { margin: 0 30px; }
 .head .name { font-size: 150%; }
 .head .dnscount { margin-left: 20px; }
+.memory { margin-left: 30px; }
 table { width: 100%; }
 th { background-color: #D0D0D0; }
 td.name { }
