@@ -149,7 +149,7 @@ class cdnboxDNSserver extends EventEmitter {
       } else {
         log = dnsrequest(remoteaddress.address, dnspacket);
       }
-      console.log(' "type": "dns", "client": "' + remoteaddress.address + '", ' +
+      cdnboxStates.logconsole('"type": "dns", "client": "' + remoteaddress.address + '", ' +
                   '"qname": "' + dnspacket.name + '", "qtype": ' + dnspacket.qtype +
                   log + ', "rlen": ' + dnspacket.curpos + ', "rcode": ' + dnspacket.rcode);
       return dnspacket.getbuff();
@@ -164,7 +164,7 @@ class cdnboxDNSserver extends EventEmitter {
     if (ratio !== undefined) {
       var config = cdnboxState.config, dnscount = cdnboxState.dnscount;
       if (dnscount.current > ratio * dnscount.average) {
-        console.log(' "type": "limit", "cause": "Throttle DNS cdnbox ' + ratio + '", "cdnbox": "' +
+        cdnboxStates.logconsole('"type": "limit", "cause": "Throttle DNS cdnbox ' + ratio + '", "cdnbox": "' +
             config.name + '", "data": "' + dnscount.current + '/' + dnscount.average + '"');
         return true;
       }
@@ -175,7 +175,7 @@ class cdnboxDNSserver extends EventEmitter {
   static dnsGlobalReqThrottle(cdnboxname, qname) { 
     var gdnscount = cdnboxStates.globaldnscount;
     if (gdnscount.limit + gdnscount.current > cdnboxStates.config.dnsserver.globalthrottlelimit * gdnscount.average) {
-      console.log(' "type": "limit", "cause": "Throttle DNS global", "cdnbox": "' + cdnboxname +
+      cdnboxStates.logconsole('"type": "limit", "cause": "Throttle DNS global", "cdnbox": "' + cdnboxname +
                   '", "qname": "' + qname +
                   '", "data": "' + gdnscount.current + '/' + gdnscount.limit + '/' + gdnscount.average + '"');
       return true;
