@@ -22,7 +22,6 @@ const https = require('https');
 const fs = require('fs');
 const crypto = require('crypto');
 
-//const cdnboxStates = require('./cdnboxStates.js');
 var cdnboxStates = null;
 const cdnboxMetrics = require('./cdnboxMetrics.js');
 
@@ -300,7 +299,8 @@ function htmlcdnboxes(req,res) {
       Math.floor(deltatime / 3600 / 24) + 'j' + 
       Math.floor(deltatime / 3600 % 24) + 'h' + 
       Math.floor(deltatime / 60 % 60) + 'm' + 
-      Math.floor(deltatime % 60) + 's </span></div>' +
+      Math.floor(deltatime % 60) + 's </span>' +
+      '<span class="memory">Rss: ' + Math.round(process.memoryUsage().rss/1024/1024) + 'Mio</span></div>' +
       '<div class="head head2"><span class="release">' + cdnboxStates.release + '</span>' +
       '<span class="dnscount">DNS(r/m): ' + Math.round(cdnboxStates.totaldnscount.average) + '</span>' +
       '<span class="dnscount">DNSGT(r/s): ' + cdnboxStates.globaldnscount.last + '/' +
@@ -653,7 +653,7 @@ function perfbeacon(req,res) {
     log += ' "country": "' + ((country && country.country)?country.country.iso_code:'none') + '",';
     log += ' "continent": "' + ((country && country.continent)?country.continent.code:'none') + '",';
     log += ' "client": "' + clientip + '"';
-    console.log(log);
+    cdnboxStates.logconsole(log);
   } catch (e) {
     console.error(e);
   }
@@ -665,7 +665,7 @@ function atob(str) {
 
 process.on('uncaughtException', (err) => {
   if (err.code == "ECONNRESET" && (err.errno == "ECONNRESET" || err.errno == -104) && err.syscall == "read") {
-    console.log(' "type": "error", "error": "uncaughtException ECONNRESET"');
+    cdnboxStates.logconsole('"type": "error", "error": "uncaughtException ECONNRESET"');
   } else {
     console.error('Process uncaught: ' + err);
     console.error('Process uncaught details: %s %s %s', err.code, err.errno, err.syscall);
