@@ -33,19 +33,19 @@ if (cdnboxStates.config.tcprtt) {
   try {
     locationLookup = maxmind.openSync('./GeoLite2-City.mmdb');
     console.error('TCPRTT: City GeoDatabase loaded.');
-    console.log(' "type": "tcprtt", "error": "City GeoDatabase loaded."');
+    cdnboxStates.logconsole(' "type": "tcprtt", "error": "City GeoDatabase loaded."');
   } catch (e) {
     try {
       locationLookup = maxmind.openSync('./GeoLite2-Country.mmdb');
       console.error('TCPRTT: Country GeoDatabase loaded.');
-      console.log(' "type": "tcprtt", "error": "Country GeoDatabase loaded."');
+      cdnboxStates.logconsole(' "type": "tcprtt", "error": "Country GeoDatabase loaded."');
     } catch (e) {
     }
   }
   try {
     ASNLookup = maxmind.openSync('./GeoLite2-ASN.mmdb');
     console.error('TCPRTT: ASN GeoDatabase loaded.');
-    console.log(' "type": "tcprtt", "error": "ASN GeoDatabase loaded."');
+    cdnboxStates.logconsole(' "type": "tcprtt", "error": "ASN GeoDatabase loaded."');
   } catch (e) {
   }
 }
