@@ -243,7 +243,7 @@ function calcbw(cdnboxState) {
   for (var i = 0; i < cdnboxlist.length; i++) {
     cdnboxDNSserver.pushdata('pushbwdata', statevector, cdnboxStates[cdnboxlist[i]].ipv4);
   }
-  console.log(' "type": "bw", "bw": ' + cdnboxState.bw + ', "trendbw": ' + cdnboxState.trendbw + ' ,' +
+  cdnboxStates.logconsole('"type": "bw", "bw": ' + cdnboxState.bw + ', "trendbw": ' + cdnboxState.trendbw + ' ,' +
 	      '"bwrecv": ' + cdnboxState.bwrecv + ' ,' + 
               '"score": '+ (isNaN(cdnboxState.score)?-1:cdnboxState.score) + ', "vol": ' + delta);
 }
@@ -415,7 +415,7 @@ function getPerf(cdnbox) {
 	    }
           }
         } else if (msg.type == "log") {
-          console.log(msg.msg);
+          cdnboxStates.logconsole(msg.msg);
         } else if (msg.type == "err") {
           logerror('"error": "' + msg.error + '"');
         }
@@ -607,9 +607,8 @@ async function testCDNBoxes() {
   // localtests
   if (cdnboxStates.local.config.localtests) dolocaltests(cdnboxStates.local);
   // get metrics
-  console.log(' "type":"memory",' + JSON.stringify(process.memoryUsage()).replace(/[{}]/g, ''));
   if (cdnboxStates.local.config.varnishmetrics && cdnboxStates.config.varnishmetricsoutput === "log") {
-    console.log('"type":"varnish"' + await cdnboxMetrics.getvarnishmetrics(cdnboxStates));
+    cdnboxStates.logconsole('"type":"varnish"' + await cdnboxMetrics.getvarnishmetrics(cdnboxStates));
   }
 }
 
@@ -660,7 +659,7 @@ cdnboxStates.notificationbucket = { "time": Date.now(), "count": 0, "remindertim
 // Error logging and alerting.
 var lastmessages = [];
 function logerror(text) {
-  console.log(' "type": "error", ' + text);
+  cdnboxStates.logconsole('"type": "error", ' + text);
   var localconfig = cdnboxStates.local.config;
   if (localconfig.notification) {
     var bucket = cdnboxStates.notificationbucket, newtime = Date.now();
@@ -674,7 +673,7 @@ function logerror(text) {
         newtime > bucket.remindertime + localconfig.notification.remindertime * 1000) {
       bucket.remindertime = newtime;
       bucket.count = 0;
-      console.log(' "type": "notification", "data": "count: ' + bucket.count + '"');
+      cdnboxStates.logconsole('"type": "notification", "data": "count: ' + bucket.count + '"');
       mailtransporter.sendMail(
          { to: localconfig.notification.email,
            from: "cdnboxd@" + cdnboxStates.local.config.hostname,
@@ -683,12 +682,20 @@ function logerror(text) {
          },
          (error, info) => {
            if (error) { return console.error(error); }
-           console.log(' "type": "mail", "data": "Alert mail sent: ' + info.messageId + '" ');
+           cdnboxStates.logconsole('"type": "mail", "data": "Alert mail sent: ' + info.messageId + '"');
          });
     }
   }
 }
 cdnboxStates.logerror = logerror;
+
+cdnboxStates.logconsole = function (msg) {
+  if (cdnboxStates.config.logjsonobject) {
+    console.log('{ "@timestamp": "' + (new Date).toISOString() + '", ' + msg + '}');
+  } else {
+    console.log(msg);
+  }
+}
 
 function convertIPv6totab(address) {
   var tab = Buffer.alloc(16, 0);
