@@ -71,14 +71,14 @@ function choose(reqname, country) {
 
     // gestion de la saturation de BP. Si sature on passe.
     if (cdnboxState.bw > cdnboxconfig.ceilbw) {
-        console.log(' "type": "limit", "cause": "Limitation BP max' + cdnboxconfig.ceilbw +
+        cdnboxStates.logconsole('"type": "limit", "cause": "Limitation BP max' + cdnboxconfig.ceilbw +
                       '", "cdnbox": "' + cdnboxconfig.name + '"');
       continue;
     }
     if (cdnboxState.bw > cdnboxconfig.floorbw) {
       let delta = cdnboxState.bw - cdnboxconfig.floorbw, base = cdnboxconfig.ceilbw - cdnboxconfig.floorbw;
       if (Math.random() * base < delta) {
-        console.log(' "type": "limit", "cause": "Limitation BP delta ' + Math.floor(delta / 10) +
+        cdnboxStates.logconsole('"type": "limit", "cause": "Limitation BP delta ' + Math.floor(delta / 10) +
                     '", "cdnbox": "' + cdnboxconfig.name + '"');
         continue;
       }
